@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2019
-  ~ California Department of Water Resources
-  ~ All Rights Reserved.  DWR PROPRIETARY/CONFIDENTIAL.
-  ~ Source may not be released without written approval from DWR
+  ~ Enhanced Post Processing Tool (EPPT) Copyright (c) 2019.
+  ~
+  ~ EPPT is copyrighted by the State of California, Department of Water Resources. It is licensed
+  ~ under the GNU General Public License, version 2. This means it can be
+  ~ copied, distributed, and modified freely, but you may not restrict others
+  ~ in their ability to copy, distribute, and modify it. See the license below
+  ~ for more details.
+  ~
+  ~ GNU General Public License
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
@@ -13,16 +18,30 @@
 	<parent>
 		<groupId>gov.ca.water</groupId>
 		<artifactId>eppt-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.1-SNAPSHOT</version>
 		<relativePath>../eppt-parent</relativePath>
 	</parent>
 	<artifactId>eppt-ui</artifactId>
 	<name>EPPT UI</name>
+	<properties>
+		<argLine>-Djava.library.path=${project.build.directory}\lib -Xmx1024m -XX:MaxPermSize=256m</argLine>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>gov.ca.water</groupId>
 			<artifactId>eppt-core</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.rma.javafx</groupId>
+			<artifactId>rmaJavaFx</artifactId>
+			<version>v1.2.12</version>
+			<exclusions>
+				<exclusion>
+					<groupId>*</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.swixml</groupId>
@@ -35,6 +54,23 @@
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.3.1</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>hecjavadev-core</groupId>
+			<artifactId>rma</artifactId>
+			<version>6.0</version>
+			<classifier>DeltaERT-1-4-0-97-Obfuscated</classifier>
+			<exclusions>
+				<exclusion>
+					<groupId>*</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>rma.util</groupId>
+			<artifactId>lookup</artifactId>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -66,38 +102,29 @@
 			<artifactId>json</artifactId>
 			<version>20171018</version>
 		</dependency>
+		<dependency>
+			<groupId>gov.ca.water</groupId>
+			<artifactId>eppt-report-engine</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>gov.ca.water</groupId>
+			<artifactId>eppt-jasper-engine</artifactId>
+			<version>${project.version}</version>
+			<!--<scope>runtime</scope>-->
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>2.22.1</version>
 				<configuration>
-					<argLine>-Djava.library.path=${project.build.directory}\test-classes</argLine>
+					<forkCount>0</forkCount>
+					<additionalClasspathElements>${java.home}/lib/ext/jfxrt.jar</additionalClasspathElements>
 				</configuration>
 			</plugin>
-			<!--<plugin>-->
-			<!--<groupId>org.jacoco</groupId>-->
-			<!--<artifactId>jacoco-maven-plugin</artifactId>-->
-			<!--<version>0.8.3</version>-->
-			<!--<executions>-->
-			<!--<execution>-->
-			<!--<id>prepare</id>-->
-			<!--<phase>compile</phase>-->
-			<!--<goals>-->
-			<!--<goal>prepare-agent</goal>-->
-			<!--</goals>-->
-			<!--</execution>-->
-			<!--<execution>-->
-			<!--<id>report</id>-->
-			<!--<phase>test</phase>-->
-			<!--<goals>-->
-			<!--<goal>report</goal>-->
-			<!--</goals>-->
-			<!--</execution>-->
-			<!--</executions>-->
-			<!--</plugin>-->
 		</plugins>
 	</build>
 </project>
